--- a/database/config.json
+++ b/database/config.json
@@ -1,22 +1,15 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "12345678",
+    "database": "egg-sequelize-doc-default",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
+    "password": "12345678",
+    "database": "egg-sequelize-doc-unittest",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
