--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "egg": "^2.22.2",
     "egg-sequelize": "^5.2.2",
     "egg-ua": "./egg-ua",
+    "egg-validate": "^2.0.2",
     "egg-view-nunjucks": "^2.2.0",
     "moment": "^2.24.0",
     "mysql2": "^2.1.0"
