1.MiddleWare:gzip的编写 2.bodyparser:的配置，安装xml-js，解析xml格式的body 3.对egg代码进行debug的调试

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "egg-validate": "^2.0.2",
     "egg-view-nunjucks": "^2.2.0",
     "moment": "^2.24.0",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "egg-bin": "^4.13.0",
