添加vsCode调试启动配置

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "egg-bin dev",
+    "debug": "egg-bin debug",
     "test": "egg-bin test",
     "cov": "egg-bin cov"
   },
